--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,4 @@
 @import url(./blocks/card/__likes/card__likes.css);
 @import url(./blocks/form/__submit/_content/form__submit_content_yes.css);
 @import url(./blocks/profile/__avatar-btn/profile__avatar-btn.css);
+@import url(./blocks/card/__delete-btn/_hidden/card__delete-btn_hidden.css);
